# xstart

./: .gitignore  CMakeLists.txt  COPYING  README  SETUP-REDIST.ISS  SETUP.ISS  build-clean.bat  build-cmake.bat  build-make-install.bat  build-mingw.bat
editor/: COPYING  SciTEGlobal.properties  cpp.properties  d.properties  editor  format.bat  gen-igp-api.js  gm.api  gm.properties  gm.properties.b  gm.properties.linux  help.htm  js.api  others.properties  quickstart.htm  scite
editor/quickstart_files/: checkbox.css  css  github.css  rainbow-custom.min.js.Download  wiki.css
examples/: (null)\xstart.gm  ADDevice.gm  AudioDevice.gm  UTF-8.gm  ad-in.gm  ad-out.gm  app-keyboard.gm  array-find.gm  array.gm  audio-mic-play.gm  audio-tunnel.gm  audio.gm  audioout.gm  baslercam.gm  camera.gm  canvas-draw.gm  canvas.gm  classtest.gm  cleverbot.gm  config.gm  date.gm  detector.gm  eval.gm  event.gm  events.gm  file.gm  font-bg.gm  frame.gm  game.gm  gstreamer.gm  httpserver.gm  intro.gm  json.gm  list.gm  log-file-rotation.gm  log.txt  map-primitives.gm  map.gm  markdown.gm  midifile.gm  (+19 more)
examples/images/: canvas-bg.pspimage
examples/misc/: code.htm  config.ini  mesh.mtl  test.htm  test.xml
examples/shaders/: basic.vs  bayer8.fs  blur.fs
extras/: setup-redist.iss  setup.iss  watchman.py
extras/website/: index.htm  site.pspimage  site2.pspimage
extras/website/Corel Auto-Preserve/: site.pspimage  site2.pspimage
extras/website/examples/: audioout.html
lib/: App.gm  Blink.gm  Button.gm  FaceDetector.gm  GPIO.gm  Gallery.gm  Keyboard.gm  LogRotation.gm  Math.gm  Scancodes.gm  SmileDetector.gm  String.gm  Theme.gm  VLC.gm
lib/data/: blur.fs  glow.fs  grey.fs  invert.fs  normal.fs  normal.vs
scripts/: MobaXterm.ini  apigen.gm  docgen.gm  help.htm  key-sc-to-vk.gm  keylookup.gm  package.gm  scancode.c  udoo-connect.gm
scripts/lib/: App.gm  Blink.gm  FaceDetector.gm  Keyboard.gm  Math.gm  String.gm  Theme.gm
scripts/lib/data/: grey.fs  slight.fs
src/: CMakeLists.txt
src/astyle/: ASFormatter.cpp  CMakeLists.txt  astyle.h  astyle_main.cpp  astyle_main.h
src/cairo/: CMakeLists.txt  cairo-atomic-private.h  cairo-compiler-private.h  cairo-features.h  cairo-image-source.c  cairo-mutex-impl-private.h  cairo-wideint-type-private.h  cairo.h  cairoint.h  config.h
src/corela/: CMakeLists.txt  StringClass.h  _SYSFONT.INL  capture.cpp  cont.h  corela.h  corela_t.h  draw.cpp  ds_utils.cpp  ds_utils.h  fileio.cpp  font.cpp  glsl.cpp  glutils.cpp  glutils.h  gst-backend.c  gst-backend.h  image.cpp  ini.cpp  log.cpp  opengl.cpp  plat_linux.cpp  plat_windows.cpp  stb_image.c  strtrim.cpp  strtrim.h  text_arab.cpp  texture.cpp  texture.inl  time.cpp  video.cpp  video2.cpp
src/curl/: CMakeLists.txt  config-win32.h  content_encoding.c
src/dsbase/: BaseClasses.vcxproj  CMakeLists.txt  baseclasses.opensdf
src/dxsdk/: strmif.h
src/expat/: CMakeLists.txt  expat_external.h  xmlparse.c  xmlrole.c  xmltok.c
src/freetype/: CMakeLists.txt  ft2build.h  fterrdef.h
src/freetype/autofit/: aferrors.h  afglobal.c
src/freetype/config/: ftheader.h  ftoption.h
src/glxgears/: CMakeLists.txt  glxgears.c
src/gm/: CMakeLists.txt  gmByteCode.cpp  gmCodeGen.cpp  gmCodeTree.cpp  gmConfig.h  gmConfig_p.h  gmDebug.cpp  gmMachine.cpp  gmMachine.h  gmMachineLib.cpp  gmMathLib.cpp  gmStringLib.cpp  gmThread.cpp  gmThread.h  gmVariable.h
src/gm - Kopie/: gmByteCode.cpp  gmCodeGen.cpp  gmCodeTree.cpp  gmConfig.h  gmConfig_p.h  gmMachine.cpp  gmMachine.h  gmMachineLib.cpp  gmStringLib.cpp  gmThread.cpp  gmThread.h  gmVariable.h
src/hw_optris/: ImagerIPC2.h
src/libnodave/: CMakeLists.txt  nodave.h  openS7online.c  openS7online.h  openSocket.h  openSocketw.c  setport.h
src/libnova/: CMakeLists.txt  julian_day.c  julian_day.h  ln_types.h  utility.c  utility.h
src/libsoxr/: CMakeLists.txt  aliases.h  internal.h  soxr-config.h
src/markdown/: CMakeLists.txt  blocktags  config.h  markdown.h  mkdio.h  pgm_options.c  tags.c
src/midifile/: Binasc.cpp  CMakeLists.txt  MidiEvent.cpp  MidiFile.cpp
src/mongoose/: CMakeLists.txt  mongoose.c  mongoose.h
src/ogg/: CMakeLists.txt  os_types.h
src/opencv2/: CMakeLists.txt  opencv_modules.hpp
src/opencv2/core/: gpumat.cpp
src/pasco/: pasco_api.h
src/pixman/: CMakeLists.txt  pixman-region16.c  pixman-region32.c
src/portaudio/: CMakeLists.txt
src/portaudio/common/: pa_util.h
src/portaudio/os/win/: pa_win_hostapis.c
src/pylonc/genapic/: GenApiC.h  GenApiC32BitMethods.h  GenApiCDefines.h  GenApiCError.h  GenApiCModule.h
src/pylonc/include/genapic/: GenApiCDefines.h  GenApiCEnums.h  GenApiCError.h  GenApiCTypes.h
src/pylonc/include/pylonc/: PylonAviCompressionOptions.h  PylonC.h  PylonC32BitMethods.h  PylonCDefines.h  PylonCEnums.h  PylonCError.h  PylonCModule.h
src/pylonc/pylonc/: PylonAviCompressionOptions.h  PylonC32BitMethods.h  PylonCEnums.h  PylonCError.h
src/soundtouch/: CMakeLists.txt  STTypes.h
src/soundy/: !strm_flac.c!  !strm_flac.h!  !strm_mod.c!  !strm_mod.h!  !strm_speex.c!  !strm_speex.h!  CMakeLists.txt  sdy.h  sdy_audlines.c  sdy_audlines.h  sdy_cont.h  sdy_ctrl.c  sdy_ctrl.h  sdy_ctrl3d.c  sdy_def.h  sdy_drv.cpp  sdy_drv.h  sdy_drv_stub.!cpp  sdy_loader.c  sdy_loader.h  sdy_manage.c  sdy_manage.h  strm_ogg.c  strm_ogg.h  strm_wav.c  strm_wav.h
src/ssockets/: ActiveSocket.cpp  CMakeLists.txt  Host.h  PassiveSocket.cpp  SimpleSocket.cpp  SimpleSocket.h  StatTimer.h
src/tinycthread/: tinycthread.c
src/vorbis/: CMakeLists.txt
src/xstart/: ADDevice.h  Array.h  Astro.h  Audio.cpp  Audio.h  BaslerCam.cpp  BaslerCam.h  Bitmap.h  CMakeLists.txt  Camera.h  Canvas.h  Color.h  Data.h  Date.cpp  Date.h  Detector.h  Dmx.cpp  Dmx.h  Event.h  File.h  Font.h  Frame.cpp  Frame.h  Framebuffer.h  GStreamer.h  Image.h  Json.h  List.h  Logo.h  Map.h  Markdown.h  MidiFile.h  Model.cpp  Model.h  Node.h  NodeEx.h  Optris.h  Pasco.h  RawFile.h  Recorder.h  (+29 more)
src/zlib/: CMakeLists.txt  png.h  pngpriv.h
