include_directories(${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/src/pylonc)
link_directories(${CMAKE_SOURCE_DIR}/src/pylonc)

if(WIN32)
  add_subdirectory(soundy)
  add_subdirectory(libnova)
#  add_subdirectory(dsbase)
elseif(UNIX)
  add_subdirectory(glxgears)
endif()

#add_subdirectory(curl)
add_subdirectory(gm)
add_subdirectory(expat)
add_subdirectory(zlib)
add_subdirectory(freetype)
add_subdirectory(pixman)
add_subdirectory(cairo)
add_subdirectory(corela)
add_subdirectory(ssockets)
add_subdirectory(libnodave)
add_subdirectory(opencv2)
add_subdirectory(ogg)
add_subdirectory(vorbis)
add_subdirectory(midifile)
add_subdirectory(portaudio)
add_subdirectory(libsoxr)
add_subdirectory(soundtouch)
add_subdirectory(mongoose)
add_subdirectory(xstart)
